[package]
name = "pixeleditor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# egui = "0.23.0"
# eframe = "0.22.0"
# env_logger = "0.10"

# egui_extras = { version = "*", features = ["all_loaders"] }
# image = { version = "0.24", features = ["jpeg", "png"] }
# eframe = { path = "../../crates/eframe", features = [
#     "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
# ] }
# 
# # For image support:
# egui_extras = { path = "../../crates/egui_extras", features = ["image"] }

# gtk = "0.9.0"
# cairo = "0.10.0"

egui-macroquad = { version = "0.15.0", default-features = false }
macroquad = "0.3.25"
egui = "0.21.0"
egui_file = "0.8.0"
image = "0.24.7"